dark mode  related bug fix

--- a/assets/scss/control/_plugin-mode-modal.scss
+++ b/assets/scss/control/_plugin-mode-modal.scss
@@ -184,3 +184,14 @@
         }
     }
 }
+
+#savedtemplate{
+    border-color: $success!important;
+    color: $white!important;
+}
+.betterlinks-upgradetopro{
+    color: $light;
+    h3{
+        color: $white;
+    }
+}
