--- a/assets/scss/control/_plugin-mode.scss
+++ b/assets/scss/control/_plugin-mode.scss
@@ -552,3 +552,10 @@
 		color: $white;
 	}
 }
+
+.btl-gopremium-container{
+    color: $light;
+    .btl-gopremium-title{
+        color: $white;
+    }
+}
